--- a/style.css
+++ b/style.css
@@ -23,3 +23,38 @@
   'GRAD' 0,
   'opsz' 24
 }
+
+body {
+	height: 100vh;
+	max-inline-size: 1200px;
+	margin:0 auto;
+	padding-block: 24px;
+	background-color: var(--bg-main);
+}
+
+header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	border-radius: 12px;
+	padding: 16px 32px;
+	background-color: var(--bg-component);
+}
+
+.header__title {
+	font-size: 2.5rem;
+	font-weight: 500;
+	color: var(--yellow);
+}
+
+button {
+	display: flex;
+	align-items: center;
+	border-radius: 12px;
+	font-weight: 500;
+	padding: 8px;
+}
+
+.button__primary {
+	background-color: var(--yellow);
+}
