--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ header {
 	align-items: center;
 	border-radius: 12px;
 	padding: 16px 32px;
+	margin-block-end: 24px;
 	background-color: var(--bg-component);
 }
 
@@ -58,20 +59,20 @@ header {
 	margin-block-start: 24px;
 }
 
-.card {
-	background-color: var(--bg-component);
-}
-
 .modal {
 	position: fixed;
 	top: 45%;
 	left: 50%;
 	transform: translate(-50%,  -50%);
-	inline-size: 25%;
+	inline-size: clamp(280px, 90vw, 400px);
 	border: 0;
 	border-radius: 8px;
 	z-index: 9999;
 	background-color: var(--bg-component);
+}
+
+.modal:focus {
+	outline: none;
 }
 
 .modal::backdrop {
@@ -100,7 +101,7 @@ header {
 	margin-block: 8px 24px;
 	color: var(--text-white);
 	border-radius: 6px;
-	outline: 1px solid var(--yellow);
+	border: 1px solid var(--yellow);
 	background-color: var(--bg-main);
 }
 
